Bug Fix: Suppress flicker.

--- a/src/css/core/object/objects/list.scss
+++ b/src/css/core/object/objects/list.scss
@@ -6,6 +6,7 @@
     height: 100%;
     margin: 0 !important;
     padding: 0 !important;
+    will-change: transform;
   }
 
   &.is-initialized:not(.is-active) {
