--- a/src/css/core/object/objects/slide.scss
+++ b/src/css/core/object/objects/slide.scss
@@ -1,6 +1,5 @@
 .splide {
   &__slide {
-    backface-visibility: hidden;
     box-sizing: border-box;
     flex-shrink: 0;
     list-style-type: none !important;
